Replacing 'OpenMoko' with 'Openmoko'

--- a/U-Boot_commands.mw
+++ b/U-Boot_commands.mw
@@ -111,7 +111,7 @@ GTA01Bv3 # nand read 0x32000000 kernel
 NAND read: device 0 offset 212992, size 2097152 ...  2097152 bytes read: OK
 GTA01Bv3 # bootm 0x32000000
 ## Booting image at 32000000 ...
-   Image Name:   OpenMoko Kernel Image Neo1973
+   Image Name:   Openmoko Kernel Image Neo1973
    Created:      2007-02-15  23:54:18 UTC
    Image Type:   ARM Linux Kernel Image (gzip compressed)
    Data Size:    1546258 Bytes =  1.5 MB
@@ -260,7 +260,7 @@ respectively.
 
 === GSM ===
 
-Starting with OpenMoko patchset '''SVN revision 2885''', u-boot contains support for powering the GSM modem,
+Starting with Openmoko patchset '''SVN revision 2885''', u-boot contains support for powering the GSM modem,
 and even accessing the modem from the console.
 
 ==== GSM power ====
