--- a/Building_Gadget_USB_Module.mw
+++ b/Building_Gadget_USB_Module.mw
@@ -59,7 +59,7 @@ Prepare your kernel tree: copy the current kernel configuration and start kernel
   cp /boot/config-`uname -r` .config
   make menuconfig
 
-Find and enable all the necessary modules by following [[OpenMoko_under_QEMU#Setting_up_USB_connection|these instructions]].
+Find and enable all the necessary modules by following [[Openmoko_under_QEMU#Setting_up_USB_connection|these instructions]].
 
 It's now time to compile your kernel. Type:
   make-kpkg -us -uc --initrd kernel_image kernel_headers
