Replacing 'OpenMoko' with 'Openmoko'

--- a/CAcert.mw
+++ b/CAcert.mw
@@ -1,6 +1,6 @@
 = CAcert and Openmoko =
 
-CACert is utilized and deployed by OpenMoko on multiple systems.
+CACert is utilized and deployed by Openmoko on multiple systems.
 
 == Openmoko IT Infrastructure ==
 
