--- a/CDMA.mw
+++ b/CDMA.mw
@@ -8,17 +8,17 @@ Every phone needs to be provisioned by the carrier itself.<br>
 Most CDMA phones do not even have a R-UIM slot it seems.<br>
 Thus a CDMA Version is currently not feasible.
 
-Verizon Wireless recently announced their [http://news.vzw.com/news/2007/11/pr2007-11-27.html ‘Any Apps, Any Device’] option for their customers in 2008. With this announcement, a CDMA2K-EVDO-based OpenMoko has become a distinct possibility.
+Verizon Wireless recently announced their [http://news.vzw.com/news/2007/11/pr2007-11-27.html ‘Any Apps, Any Device’] option for their customers in 2008. With this announcement, a CDMA2K-EVDO-based Openmoko has become a distinct possibility.
 
 If you notice 
 http://investor.verizon.com/news/view.aspx?NewsID=872 and remember that LTE is a GSM technology, it does not seem like CDMA is going to be around for much longer. Anyone with Verizon should probably just wait until the switch is made.
 
 ==Interest==
 
-This page is to suggest the possibility of a CDMA version of the OpenMoko and see if there would be any interest in accomplishing this:
+This page is to suggest the possibility of a CDMA version of the Openmoko and see if there would be any interest in accomplishing this:
 
 Leave your nickname here if you are interested in a CDMA version.<br>
-#[[User:NeoSpawn|NeoSpawn]] -- Being a current Verizon wireless user, they use a CDMA system, and so I would very much buy OpenMoko if it is a phone that I have full access. This would be unheard of, and honestly I think this would take off like a wildfire
+#[[User:NeoSpawn|NeoSpawn]] -- Being a current Verizon wireless user, they use a CDMA system, and so I would very much buy Openmoko if it is a phone that I have full access. This would be unheard of, and honestly I think this would take off like a wildfire
 #[[User:dyous87|dyous87]] -- CDMA support for carriers such as Verizon wireless is all I would need to get this phone. If this comes out I would get it without having to think twice.
 #[[User:SteveoSupremo|SteveoSupremo]] -- I am willing and able to do hardware design. And if FIC wants it I will sign a NDA. 
 # [[User:Ryuch|Ryuch]] 06:48, 26 October 2007 (CEST)
@@ -26,7 +26,7 @@ Leave your nickname here if you are interested in a CDMA version.<br>
 # [[User:brusstoc|brusstoc]] Nov 2007 - I am interested. (if this is an 'open' phone, then we should not eliminate carriers just because they are short-sighted, right?)
 # [[User:artlex|artlex]] Nov 27th 2007 - Now that Verizon has decided to open up their CDMA network to all device makers in 2008 (for a 'small' fee), isn't this very desirable? In my area Verizon coverage is superior to all others. (http://news.vzw.com/news/2007/11/pr2007-11-27.html)
 # [[User:aesiamun|aesiamun]] Mar 11th 2008 - Acutally Verizon is moving to a GSM network.  They are building out a GSM-based network called LTE http://www.engadget.com/2007/09/21/verizon-dumps-cdma-for-gsm-based-lte-in-4g-networks
-# [[User:RyanT5000|RyanT5000]] 05:20, 28 November 2007 (CET) - I'm currently locked into a Verizon plan, and this phone seems clearly superior to all the Verizon phones (except for slide-out keyboards, which some prefer).  If I understand correctly, Sprint's selection is almost as bad.  OpenMoko could capture a huge segment of the CDMA high-end phone market, especially since there's no indication that a CDMA iPhone will be released any time soon.
+# [[User:RyanT5000|RyanT5000]] 05:20, 28 November 2007 (CET) - I'm currently locked into a Verizon plan, and this phone seems clearly superior to all the Verizon phones (except for slide-out keyboards, which some prefer).  If I understand correctly, Sprint's selection is almost as bad.  Openmoko could capture a huge segment of the CDMA high-end phone market, especially since there's no indication that a CDMA iPhone will be released any time soon.
 # [[User:Endingexodus|Endingexodus]] Feb, 9th 2008 - As I currently use Verizon, I would very much like to see a Verizon compatible phone, I am in agreement with brusstoc, in which if openmoko is truly open, it would be compatible with as many carriers as possible. A higher price for a more specialized phone would not be terrible.
 # [[User:Swagger|Swagger]] March 1st, 2008 - I'm currently a Sprint customer and I would LOVE a CDMA version of this phone.  The current selection of smart phones is crap.
 # [[User:derekv|derekv]] March 22nd, 08 - Verizon Customer, I get good service with Verizon but their selection of phones is terrible.  At the moment they only have one linux based phone, which is their cdma/gsm "worldphone".  I'm curious to see how this "any device" thing is going to pan out.  It could change everything.  Having not looked at the hardware design, would it be possible for a phone to be configurable for different networks by having hardware modules?  Even if the phone had to be taken apart, it would allow you to switch networks and travel more easily, as well as upgrade, while not having to pay for networks you don't want -- ideally -- perhaps -- maybe --
@@ -35,9 +35,9 @@ Leave your nickname here if you are interested in a CDMA version.<br>
 # [[User:wldtazm4|wldtazm4]] April 20th 2008 - I would be so happy if they opened it up for cdma I love verizon, but they don't have any phones that I like. this phone is an awsome phone by the looks of it...free runner all the way!
 # [[User:5m0k3|5m0k3]] May 11th 2008 - Alltel
 # [[User:picosrfr|Will]] June 3rd 2008 - Telus Mobility.  Most of Canada is now using CDMA (EVDO) for it's phone networks and this functionality would be very beneficial for me.  The area I live in only has CDMA networks.
-# [[User:bakytn|bakytn]] June 23rd 2008 - I would be very happy if there will be OpenMoko for CDMA (EVDO). Can't find right phone for my needs. OpenMoko is great! :D
-# [[User:slick666|slick666]] June 26th 2008 - I would definitely be interested in a CDMA phone. I'm currently on Verizon Wireless in the USA as well as many of my friends and family so to have an OpenMoko on CDMA would be a definite sell for me.
+# [[User:bakytn|bakytn]] June 23rd 2008 - I would be very happy if there will be Openmoko for CDMA (EVDO). Can't find right phone for my needs. Openmoko is great! :D
+# [[User:slick666|slick666]] June 26th 2008 - I would definitely be interested in a CDMA phone. I'm currently on Verizon Wireless in the USA as well as many of my friends and family so to have an Openmoko on CDMA would be a definite sell for me.
 # [[User:Mjpatey|Mjpatey]] 23:39, 13 July 2008 (UTC) - Very interested!  I think you'll find that, though Verizon is very closed and proprietary, they have a lot of customers.  To ignore them on an ideological basis seems self-defeating.
 [[Category:Hardware ideas]]
-# [[User:BillMcGonigle|Bill McGonigle]] 2008-07-15 - In the US, with Verizon at least, if you want to change phones, you call a toll-free number and give the operator the ESN.  That's it.  I'm not sure that's such a terrible affront to freedom, despite being a minor inconvenience.  The phone itself can do anything - both Windows Mobile and PalmOS phone are available that are completely unrestricted.  Due to poor penetration of 3GPP in the US, not supporting CDMA probably reduces the addressable market by about 40%.  LTE will start to ease this in perhaps four years.  Until then, lots of folks won't be hacking on OpenMoko who otherwise could be.
+# [[User:BillMcGonigle|Bill McGonigle]] 2008-07-15 - In the US, with Verizon at least, if you want to change phones, you call a toll-free number and give the operator the ESN.  That's it.  I'm not sure that's such a terrible affront to freedom, despite being a minor inconvenience.  The phone itself can do anything - both Windows Mobile and PalmOS phone are available that are completely unrestricted.  Due to poor penetration of 3GPP in the US, not supporting CDMA probably reduces the addressable market by about 40%.  LTE will start to ease this in perhaps four years.  Until then, lots of folks won't be hacking on Openmoko who otherwise could be.
 # [[User:clovis|clovis]] - 8/10/2008 - Where I live in the states T-Mobile is not available, and the only other (major) GSM carrier we have here is AT&T, and I can't in good conscience give my money to them, what with the constant invasion of privacy and all. So I'm stuck. Otherwise I'd buy a Freerunner today. A CDMA Openmoko phone would be quite welcome.
