Replacing 'OpenMoko' with 'Openmoko'

--- a/Manuals%2FNeo_1973%2Fes.mw
+++ b/Manuals%2FNeo_1973%2Fes.mw
@@ -8,7 +8,7 @@ Retirar la tapa trasera (ver el primer paso de [[Disassembling Neo1973]]).
 
 === Encendiendo el teléfono ===
 [[Image:Neo1973_uboot_splash.jpg|200px|thumb|bootloader splash screen]]
-Pulsando el botón de encendido ''power'' (dependiendo de la versión del programa de arranque ([[u-boot]]) tienes que pulsar durante >= 5 segundos) debería activarse el teléfono primeramente con el programa de arranque, después iniciar el núcleo, y después mostrarse con X/OpenMoko.
+Pulsando el botón de encendido ''power'' (dependiendo de la versión del programa de arranque ([[u-boot]]) tienes que pulsar durante >= 5 segundos) debería activarse el teléfono primeramente con el programa de arranque, después iniciar el núcleo, y después mostrarse con X/Openmoko.
 
 Una vez pulsado el botón de encendido ''power'' durante el tiempo necesario, el vibrador se accionará durante un corto espacio de tiempo y la luz del fondo de la pantalla se encenderá. Ya podrá soltar el botón de encendido y ver como arranca el teléfono.
 
