--- a/Community_Updates.mw
+++ b/Community_Updates.mw
@@ -33,7 +33,7 @@ You may also wish to take a look at the [http://wiki.openmoko.org/wiki/Neo_FreeR
 * [http://lists.openmoko.org/pipermail/community/2008-May/017531.html May 20, 2008 - Whats up with the freerunner mass production?]
 * [http://lists.openmoko.org/pipermail/community/2008-June/018575.html 5th June, 2008 - Cleared to start Mass production]
 * [http://lists.openmoko.org/pipermail/community/2008-June/018887.html 10th June, 2008 - SMT is running!]
-* [http://lists.openmoko.org/pipermail/community/2008-June/019384.html 14th June, 2008 - When it will be possible to buy OpenMoko?]
+* [http://lists.openmoko.org/pipermail/community/2008-June/019384.html 14th June, 2008 - When it will be possible to buy Openmoko?]
 
 [[Category:Community]]
 [[Category:Community Update]]
