--- a/Contacts%2F2007.2.mw
+++ b/Contacts%2F2007.2.mw
@@ -4,7 +4,7 @@ This is the second revision of the design for the Contacts application.
 
 
 == Overview ==
-This article defines the Contact Application, an extensible application designed for the OpenMoko platform. The Contacts Application is the central location to store all address related information. 
+This article defines the Contact Application, an extensible application designed for the Openmoko platform. The Contacts Application is the central location to store all address related information. 
 
 
 == Use Cases ==
