Replacing 'OpenMoko' with 'Openmoko'

--- a/Customizing_the_Openmoko_Distribution%2Fzh_cn.mw
+++ b/Customizing_the_Openmoko_Distribution%2Fzh_cn.mw
@@ -94,7 +94,7 @@ IMAGE_INSTALL += "task-openmoko-debug"
 
 <pre>
 #------------------------------------------------------
-# OpenMoko Image Recipe
+# Openmoko Image Recipe
 #------------------------------------------------------
 
 export IMAGE_BASENAME = "${PN}"
@@ -124,7 +124,7 @@ ROOTFS_POSTPROCESS_COMMAND += 'date "+%m%d%H%M%Y" >${IMAGE_ROOTFS}/etc/timestamp
 编辑 local/packages/tasks/task-openmoko-scaredycat.bb - 这里是我们想要在映像档中放入想要的东西的目录位置。这个范例包括了 '''[http://wiki.openmoko.org/wiki/Scummvm scummvm]'''及 '''[http://www.handhelds.org/moin/moin.cgi/kbdd kbdd]'''。如果你修改了这个档案，请确定你藉由每次增加它的次数的方法，更新 '''PR''' 。
 
 <pre>
-DESCRIPTION = "OpenMoko: Scaredycat Additions"
+DESCRIPTION = "Openmoko: Scaredycat Additions"
 SECTION = "openmoko/base"
 LICENSE = "original"
 PR = "r2"
