Replacing 'OpenMoko' with 'Openmoko'

--- a/Customizing_the_Openmoko_Distribution%2Fzh_tw.mw
+++ b/Customizing_the_Openmoko_Distribution%2Fzh_tw.mw
@@ -96,7 +96,7 @@ IMAGE_INSTALL += "task-openmoko-debug"
 
 <pre>
 #------------------------------------------------------
-# OpenMoko Image Recipe
+# Openmoko Image Recipe
 #------------------------------------------------------
 
 export IMAGE_BASENAME = "${PN}"
@@ -126,7 +126,7 @@ ROOTFS_POSTPROCESS_COMMAND += 'date "+%m%d%H%M%Y" >${IMAGE_ROOTFS}/etc/timestamp
 編輯 local/packages/tasks/task-openmoko-scaredycat.bb - 這裡是我們想要在映像檔中放入想要的東西的目錄位置。這個範例包括了 '''[http://wiki.openmoko.org/wiki/Scummvm scummvm]'''及 '''[http://www.handhelds.org/moin/moin.cgi/kbdd kbdd]'''。如果你修改了這個檔案，請確定你藉由每次增加它的次數的方法，更新 '''PR''' 。
 
 <pre>
-DESCRIPTION = "OpenMoko: Scaredycat Additions"
+DESCRIPTION = "Openmoko: Scaredycat Additions"
 SECTION = "openmoko/base"
 LICENSE = "original"
 PR = "r2"
