Replacing 'OpenMoko' with 'Openmoko'

--- a/DECT%2Fde.mw
+++ b/DECT%2Fde.mw
@@ -1,4 +1,4 @@
-DECT (Digital Enhanced Cordless Telecommunications) ist ein Standard für mobile Festnetztelefone. Ein Anruf über das Festnetz ist viel vorteilhafter als über GSM; auch weil der Preis geringer. DECT ist eine sehr interessante Möglichkeit für das Openmoko. Bei Handys mit DECT herscht eine Marktlücke, welche das OpenMoko füllen könnte. OpenMoko könnte den neuen Standard CAT-iq nutzen.
+DECT (Digital Enhanced Cordless Telecommunications) ist ein Standard für mobile Festnetztelefone. Ein Anruf über das Festnetz ist viel vorteilhafter als über GSM; auch weil der Preis geringer. DECT ist eine sehr interessante Möglichkeit für das Openmoko. Bei Handys mit DECT herscht eine Marktlücke, welche das Openmoko füllen könnte. Openmoko könnte den neuen Standard CAT-iq nutzen.
 
 == Programme ==
 
