--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -1,26 +1,17 @@
 {{Om 2008.8}}
 == Keyboard guide ==
 
-[[Image:asu_keyboard_lower.png|100px;|center|ASU Keyboard]]
+[[Image:asu_keyboard_lower.png|250px|right|ASU Keyboard]]
+[[Image:asu_keyboard_word.png|250px|right|ASU Keyboard with hello]]
+[[Image:asu_keyboard_numeric.png|250px|right|ASU Keyboard with numeric keys]]
 
-
-The ASU features several keyboard layouts that users can switch between while typing.
-
-* A lower case alphabet
-* A uppercase alphabet
-* A numeric keyboard
-* Special characters.
-
-
-
-The keyboard also features some auto-word recognition that tries to guess the word you are trying to type.
-
-The keyboard also features a zoom lens that allows magnifies the letter your finger (or stylus) is over.
-
+* Features word prediction
+* Sliding your finger left is backspace.
+* Sliding your finger right is space.
+* Sliding your finger up/down changes between lowercase/uppercase/numbers/special characters.
+* Hovering over a letter for more than 2 seconds activates zoom mode, allowing you to type specific letters without prediction. 
 
 === Writing something ===
-
-[[Image:asu_keyboard_word.png|75px;|center|ASU Keyboard with hello]]
 
 If the keyboard pops up, just write someting. The word recognition will try to guess the next inputs and displays the word it thinks you want to write. If you click on this word (or slide the finger over the keyboard to the right), it will be transfered to the cursor position in the input field that is currently selected. This is also true if the word recognition cant guess what you are typing in which case it just displays the typed characters.
 
@@ -31,8 +22,6 @@ To delete the word you have typed before you transferred it to the input box, yo
 
 The keyboard only displays a subset of the available keys at any one time.  To change the keyboard layout to access additional keys slide your finger up or down directly on the keyboard. You have to do this fast that the zoom will not be activated.
 
-[[Image:asu_keyboard_numeric.png|75px;|center|ASU Keyboard with numeric keys]]
-
 The default layout when the keyboard is displayed is the lowercase alphabet but this may be overwritten by the application bringing up the keyboard. 
 
 ==== Where is the Backspase or Space character? ====
@@ -41,7 +30,7 @@ Note that to delete a character inside the input box, the word guessing box need
 
 === Keyboard Zoom ===
 
-[[Image:asu_keyboard_zoom.png|75px;|center|ASU Keyboard with zoom]]
+[[Image:asu_keyboard_zoom.png|200px|center|ASU Keyboard with zoom]]
 
 If you hover your finger (or stylus) over a letter for more than 2 seconds a magnifiying glass, or zoom mode is displayed that allows you to see the letter you are selecting. This also overrides the prediction feature for this letter, so you can type specific letters with this method.
 
