--- a/Dash_Express.mw
+++ b/Dash_Express.mw
@@ -1,6 +1,6 @@
 [[DashExpress]] is a device developed by a 3rdparty. For more information about phones developed by openmoko or are based on openmoko products, visit [[Phone Development]]. 
 
-The Dash Express is based off of the legendary [[HXD8]]. The FCC ID is: EUNHXD8V2. It does have a debug port that is compatible with the OpenMoko [[Debug Board v3]]. It is fairly hard to get to (for a FR). It sits underneath the screen.
+The Dash Express is based off of the legendary [[HXD8]]. The FCC ID is: EUNHXD8V2. It does have a debug port that is compatible with the Openmoko [[Debug Board v3]]. It is fairly hard to get to (for a FR). It sits underneath the screen.
 
 It has 3GB of internal flash. The DFU map is below: 
 
