Replacing 'OpenMoko' with 'Openmoko'

--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -67,7 +67,7 @@ FIXME. We never tried to make them work.
 
 === Ethernet ===
 
-There currently is no software/driver support for the Ethernet port in OpenMoko. Please stay tuned.
+There currently is no software/driver support for the Ethernet port in Openmoko. Please stay tuned.
 
 === Secure Media ===
 
