Replacing 'OpenMoko' with 'Openmoko'

--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -107,7 +107,7 @@ Please use the driver from http://people.openmoko.org/laforge/misc/debug_board_v
 
 ===== openocd =====
 
-[[openocd]] is required. It is recommended to use a statically-linked binary produced by the OpenMoko build system. Other versions may give "unrecognized command" errors while parsing the configuration file.
+[[openocd]] is required. It is recommended to use a statically-linked binary produced by the Openmoko build system. Other versions may give "unrecognized command" errors while parsing the configuration file.
 
 ====== openocd.cfg ======
 
@@ -131,7 +131,7 @@ ft2232_device_desc "Debug Board for Neo1973"
 
 ===== dfu-util =====
 
-[[dfu-util]] is used to write images to the NAND flash once you have a functional u-boot. It is recommended to use a statically-linked binary produced by the OpenMoko build system.
+[[dfu-util]] is used to write images to the NAND flash once you have a functional u-boot. It is recommended to use a statically-linked binary produced by the Openmoko build system.
 
 === Hardware connection ===
 
