Replacing 'OpenMoko' with 'Openmoko'

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -31,7 +31,7 @@ http://lists.openmoko.org/mailman/listinfo/commitlog
 
 ==== community@lists.openmoko.org ====
 
-This is a public mailinglist for generic discussion of our user + developer community. It acts as a place where people discuss their dreams/wishes/ideas about OpenMoko software and supported hardware, applications, and the like.  It's an area of general talking and chatting. Please do ''not'' post usage or development questions here.
+This is a public mailinglist for generic discussion of our user + developer community. It acts as a place where people discuss their dreams/wishes/ideas about Openmoko software and supported hardware, applications, and the like.  It's an area of general talking and chatting. Please do ''not'' post usage or development questions here.
 
 http://lists.openmoko.org/mailman/listinfo/community
 
@@ -39,7 +39,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.community
 
 ==== devel@lists.openmoko.org ====
 
-This is a mailinglist on the OpenMoko Distribution. Here issues such as ipk packaging related and root fs image related topics should be discussed. Also, questions regarding the OpenEmbedded based build process go here.
+This is a mailinglist on the Openmoko Distribution. Here issues such as ipk packaging related and root fs image related topics should be discussed. Also, questions regarding the OpenEmbedded based build process go here.
 
 http://lists.openmoko.org/mailman/listinfo/devel
 
@@ -48,7 +48,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.distro
 ==== framework-devel@lists.openmoko.org ====
 ''' NOTE: This mailing list has been closed. Discussion should continue on openmoko-devel. '''
 
-This is a mailinglist on the OpenMoko Framework. Please use this list to post questions with regard to the OpenMoko Framework, the API's, their usage, API change requests and the like.
+This is a mailinglist on the Openmoko Framework. Please use this list to post questions with regard to the Openmoko Framework, the API's, their usage, API change requests and the like.
 
 http://lists.openmoko.org/mailman/listinfo/framework-devel
 
@@ -56,7 +56,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.framework
 
 ==== gsmd-devel@lists.openmoko.org ====
 
-This is a mailinglist on the OpenMoko gsmd (GSM daemon) and the corresponding libgsmd.
+This is a mailinglist on the Openmoko gsmd (GSM daemon) and the corresponding libgsmd.
 
 http://lists.openmoko.org/mailman/listinfo/gsmd-devel
 
@@ -65,7 +65,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.gsmd
 ==== openmoko-apps@lists.openmoko.org ====
 '''NOTE: This mailing list has been closed. Discussion should continue on openmoko-devel.'''
 
-This is a public mailinglist about the development of the "official" OpenMoko applications, e.g. openmoko-dialer2, openmoko-dates2, openmoko-contacts2, and openmoko-today2. Please do ''not'' use this list for issues related to third party applications.
+This is a public mailinglist about the development of the "official" Openmoko applications, e.g. openmoko-dialer2, openmoko-dates2, openmoko-contacts2, and openmoko-today2. Please do ''not'' use this list for issues related to third party applications.
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-apps/
 
@@ -73,7 +73,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.apps
 
 ==== openmoko-devel@lists.openmoko.org ====
 
-This is a public mailing list for discussion of development related to Openmoko in general. The mailing lists framework-devel and openmoko-apps have been merged into this one. Developers who are writing applications using the OpenMoko framework should join this.
+This is a public mailing list for discussion of development related to Openmoko in general. The mailing lists framework-devel and openmoko-apps have been merged into this one. Developers who are writing applications using the Openmoko framework should join this.
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-devel
 
@@ -87,7 +87,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.kernel
 
 ==== support@lists.openmoko.org ====
 
-This is a public mailinglist for discussion among actual owners of an OpenMoko based device. Here you can ask for assistance, share your experiences, etc. Please keep this list clean of any philosophical debates or general openmoko related discussion. That's what ''community@lists.openmoko.org'' is for!  (This list was formerly called device-owners).
+This is a public mailinglist for discussion among actual owners of an Openmoko based device. Here you can ask for assistance, share your experiences, etc. Please keep this list clean of any philosophical debates or general openmoko related discussion. That's what ''community@lists.openmoko.org'' is for!  (This list was formerly called device-owners).
 
 http://lists.openmoko.org/mailman/listinfo/support
 
@@ -188,7 +188,7 @@ The '''#openmoko-devel''' channel is for internal developers only, sorry. Commun
 
 == Local Community ==
 
-See the [[OpenMoko_Local_Groups|OpenMoko Local Groups]]
+See the [[Openmoko_Local_Groups|Openmoko Local Groups]]
 
 == Private repositories and branches ==
 
