Replacing 'OpenMoko' with 'Openmoko'

--- a/Community_Resources%2Fes.mw
+++ b/Community_Resources%2Fes.mw
@@ -36,7 +36,7 @@ http://lists.openmoko.org/mailman/listinfo/commitlog
 
 Esta es una lista pública para la discusión genética de los usuarios y la comunidad de desarrollo.
 
-Es un lugar donde se discute los sueños, deseos e ideas sobre y software y el hardware de OpenMoko. Esta es una área general para charlar y discutir.
+Es un lugar donde se discute los sueños, deseos e ideas sobre y software y el hardware de Openmoko. Esta es una área general para charlar y discutir.
 
 Por favor no envíe mensajes de uso o desarrollo a esta lista.
 
@@ -46,7 +46,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.community
 
 ==== distro-devel@lists.openmoko.org ====
 
-Esta es la lista de la distribución OpenMoko.
+Esta es la lista de la distribución Openmoko.
 
 Aquí se tratan cosas como el empaquetamiento ipk y la imagen del sistemas de archivos raíz. Además, preguntas sobre el proceso base de construcción de OpenEmbedded.
 
@@ -56,9 +56,9 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.distro
 
 ==== framework-devel@lists.openmoko.org ====
 
-Esta lista de correo es sobre el Framework de OpenMoko.
+Esta lista de correo es sobre el Framework de Openmoko.
 
-Por favor use esta lista para enviar preguntas que tengan que ver con el Framework de OpenMoko, la API, su uso, cambios en esta API.
+Por favor use esta lista para enviar preguntas que tengan que ver con el Framework de Openmoko, la API, su uso, cambios en esta API.
 
 http://lists.openmoko.org/mailman/listinfo/framework-devel
 
@@ -74,7 +74,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.gsmd
 
 ==== openmoko-apps@lists.openmoko.org ====
 
-Esta lista pública es sobre el desarrollo de las aplicaciones "oficiales de OpenMoko, por ejemplo: openmoko-dialer, openmoko-dates, openmoko-contacts, openmoko-mainmenu, openmoko-today.
+Esta lista pública es sobre el desarrollo de las aplicaciones "oficiales de Openmoko, por ejemplo: openmoko-dialer, openmoko-dates, openmoko-contacts, openmoko-mainmenu, openmoko-today.
 
 Por favor no use esta lista para preguntar sobre aplicaciones hechas por terceros.
 
@@ -86,7 +86,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.apps
 
 Esta lista pública es para discutir sobre el desarrollo de aplicaciones hechas por terceros.
 
-Los desarrolladores que escriban aplicaciones usando el Framework de OpenMoko deben inscribirse en esta lista.
+Los desarrolladores que escriban aplicaciones usando el Framework de Openmoko deben inscribirse en esta lista.
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-devel
 
@@ -101,11 +101,11 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.kernel
 
 ==== device-owners@lists.openmoko.org ====
 
-Esta es una lista pública para las discusión de los dueños de dispositivos basados en OpenMoko.
+Esta es una lista pública para las discusión de los dueños de dispositivos basados en Openmoko.
 
 Aquí podrá obtener asistencia, compartir sus experiencias, etc.
 
-Por favor deje libre a esta lista de cualquier discusión filosófica  o de discusiones generales sobre OpenMoko.
+Por favor deje libre a esta lista de cualquier discusión filosófica  o de discusiones generales sobre Openmoko.
 Para eso es la lista ''community@lists.openmoko.org''.
 
 http://lists.openmoko.org/mailman/listinfo/device-owners
@@ -194,7 +194,7 @@ En http://projects.openmoko.org/ tenemos una instalación GForge. Los usuarios l
 
 == Comunidad local ==
 
-Vea [[OpenMoko_Local_Groups|OpenMoko Local Groups]]
+Vea [[Openmoko_Local_Groups|Openmoko Local Groups]]
 
 == Recursos del proyecto ==
 
