--- a/Community_Resources%2Ffr.mw
+++ b/Community_Resources%2Ffr.mw
@@ -39,7 +39,7 @@ http://lists.openmoko.org/mailman/listinfo/commitlog
 
 This is a public mailinglist for generic discussion of our user + developer community.
 
-It acts as a place where people discuss their dreams/wishes/ideas about OpenMoko software and supported hardware, applications, and the like.  It's an area of general talking and chatting.
+It acts as a place where people discuss their dreams/wishes/ideas about Openmoko software and supported hardware, applications, and the like.  It's an area of general talking and chatting.
 
 Please Do not post usage or development questions here.
 
@@ -49,7 +49,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.community
 
 ==== distro-devel@lists.openmoko.org ====
 
-This is a mailinglist on the OpenMoko Distribution.  
+This is a mailinglist on the Openmoko Distribution.  
 
 Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
 
@@ -59,9 +59,9 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.distro
 
 ==== framework-devel@lists.openmoko.org ====
 
-This is a mailinglist on the OpenMoko Framework.
+This is a mailinglist on the Openmoko Framework.
 
-Please use this list to post questions with regard to the OpenMoko Framework, the API's, their usage, API change requests and the like.
+Please use this list to post questions with regard to the Openmoko Framework, the API's, their usage, API change requests and the like.
 
 http://lists.openmoko.org/mailman/listinfo/framework-devel
 
@@ -69,7 +69,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.framework
 
 ==== gsmd-devel@lists.openmoko.org ====
 
-This is a mailinglist on the OpenMoko gsmd (GSM daemon) and the corresponding libgsmd.
+This is a mailinglist on the Openmoko gsmd (GSM daemon) and the corresponding libgsmd.
 
 http://lists.openmoko.org/mailman/listinfo/gsmd-devel
 
@@ -77,7 +77,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.gsmd
 
 ==== openmoko-apps@lists.openmoko.org ====
 
-This is a public mailinglist about the development of the "official" OpenMoko applications, e.g. openmoko-dialer, openmoko-dates, openmoko-contacts, openmoko-mainmenu, openmoko-today.
+This is a public mailinglist about the development of the "official" Openmoko applications, e.g. openmoko-dialer, openmoko-dates, openmoko-contacts, openmoko-mainmenu, openmoko-today.
 
 Please do not use this list for issues related to third party applications.
 
@@ -89,7 +89,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.apps
 
 This is a public mailinglist for discussion of development of "third party applications". 
 
-Developers who are writing applications using the OpenMoko framework should join this.
+Developers who are writing applications using the Openmoko framework should join this.
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-devel
 
@@ -105,7 +105,7 @@ Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.kernel
 
 This is a public mailinglist for discussion among openmoko users. 
 
-Please do not subscribe and/or start discussions unless you really are a user of OpenMoko software.
+Please do not subscribe and/or start discussions unless you really are a user of Openmoko software.
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-users
 
@@ -192,7 +192,7 @@ Nontheless, contrary to traditional security beliefs, we'll outline here what th
 
 === Mailing Lists ===
 
-Those are for FIC / OpenMoko employees and external partners/contractors/consultants only.
+Those are for FIC / Openmoko employees and external partners/contractors/consultants only.
 
 ==== coreteam@lists.internal.openmoko.org ====
 
@@ -234,11 +234,11 @@ Our internal bug tracking system, mainly for hardware issues, is available at ht
 
 There's a #openmoko channel on irc.freenode.net.
 
-There's also a #openmoko-devel channel, which is for OpenMoko internal developers only, sorry.
+There's also a #openmoko-devel channel, which is for Openmoko internal developers only, sorry.
 
 == Local Community ==
 
-See the [[OpenMoko_Local_Groups|OpenMoko Local Groups]]
+See the [[Openmoko_Local_Groups|Openmoko Local Groups]]
 
 == Project Resources ==
 
