Replacing 'OpenMoko' with 'Openmoko'

--- a/Community_Resources%2Fit.mw
+++ b/Community_Resources%2Fit.mw
@@ -33,7 +33,7 @@ http://lists.openmoko.org/mailman/listinfo/commitlog
 
 Questa è una mailing list pubblica per discussioni generiche sulla nostra comunità utenti + sviluppatori.
 
-E' un posto dove la gente discute i propri sogni/desideri/idee sul software e l'hardware supportato di OpenMoko, applicazioni, eccetera. E' un'area di chiacchierate e discussioni generali.
+E' un posto dove la gente discute i propri sogni/desideri/idee sul software e l'hardware supportato di Openmoko, applicazioni, eccetera. E' un'area di chiacchierate e discussioni generali.
 
 Per favore Non postare qui domande relative all'utilizzo o allo sviluppo.
 
@@ -41,7 +41,7 @@ http://lists.openmoko.org/mailman/listinfo/community
 
 ==== distro-devel@lists.openmoko.org ====
 
-Questa è una mailinglist sulla Distribuzione OpenMoko.
+Questa è una mailinglist sulla Distribuzione Openmoko.
 
 Qui problemi come i topic sul packaging ipk e l'immagine root fs dovrebbero essere discussi. Inoltre, qui vanno anche domande sul procedimento di build di OpenEmbedded.
 
@@ -49,21 +49,21 @@ http://lists.openmoko.org/mailman/listinfo/distro-devel
 
 ==== framework-devel@lists.openmoko.org ====
 
-Questa è una mailing list sul Framework OpenMoko.
+Questa è una mailing list sul Framework Openmoko.
 
-Prego usare questa lista per porre domande a proposito del Framework OpenMoko, le API, il loro utilizzo, richieste di cambiamento sulle API eccetera.
+Prego usare questa lista per porre domande a proposito del Framework Openmoko, le API, il loro utilizzo, richieste di cambiamento sulle API eccetera.
 
 http://lists.openmoko.org/mailman/listinfo/framework-devel
 
 ==== gsmd-devel@lists.openmoko.org ====
 
-Questa è una mailing list sul gsmd (demone GSM) di OpenMoko e la libgsmd corrispondente.
+Questa è una mailing list sul gsmd (demone GSM) di Openmoko e la libgsmd corrispondente.
 
 http://lists.openmoko.org/mailman/listinfo/gsmd-devel
 
 ==== openmoko-apps@lists.openmoko.org ====
 
-Questa è una mailing list pubblica sullo sviluppo delle applicazioni "ufficiali" OpenMoko, come openmoko-dialer, openmoko-dates, openmoko-contacts, openmoko-mainmenu, openmoko-today.
+Questa è una mailing list pubblica sullo sviluppo delle applicazioni "ufficiali" Openmoko, come openmoko-dialer, openmoko-dates, openmoko-contacts, openmoko-mainmenu, openmoko-today.
 
 Per favore non usate questa lista per problemi relativi ad applicazioni di terze parti.
 
@@ -73,7 +73,7 @@ http://lists.openmoko.org/mailman/listinfo/openmoko-apps/
 
 Questa è una mailing list pubblica per discussioni e sviluppo di "applicazioni di terze parti".
 
-Gli sviluppatori che stanno scrivendo applicazioni che usano il framework OpenMoko dovrebbero iscriversi.
+Gli sviluppatori che stanno scrivendo applicazioni che usano il framework Openmoko dovrebbero iscriversi.
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-devel
 
@@ -87,7 +87,7 @@ http://lists.openmoko.org/mailman/listinfo/openmoko-kernel
 
 Questa è una mailing list pubblica per discussioni fra gli utenti openmoko.
 
-Per favore non iscriversi e/o iniziare discussioni se non si è veramente utenti di sofware OpenMoko.
+Per favore non iscriversi e/o iniziare discussioni se non si è veramente utenti di sofware Openmoko.
 
 http://lists.openmoko.org/mailman/listinfo/openmoko-users
 
@@ -166,13 +166,13 @@ su http://projects.openmoko.org/ abbiamo un'installazione GForge. Gli utenti pos
 
 == Risorse interne ==
 
-Ci sono alcune risorse che sono interne. Questo significa che sono disponibili solo per gli sviluppatori interni di FIC / OpenMoko Inc. Il motivo per cui sono interne è perchè contengono informazioni sotto NDA, o su strategie di business. Vi chiediamo gentilmente di capire che nonostante noi cerchiamo realmente di essere il più aperti possibile, ci sono alcune discussioni che devono essere portate avanti senza una partecipazione pubblica.
+Ci sono alcune risorse che sono interne. Questo significa che sono disponibili solo per gli sviluppatori interni di FIC / Openmoko Inc. Il motivo per cui sono interne è perchè contengono informazioni sotto NDA, o su strategie di business. Vi chiediamo gentilmente di capire che nonostante noi cerchiamo realmente di essere il più aperti possibile, ci sono alcune discussioni che devono essere portate avanti senza una partecipazione pubblica.
 
 Inoltre, contrariamente alle tradizionali misure di sicurezza, riveleremo qui quali sono quelle risorse.
 
 === Mailing Lists ===
 
-Queste sono solo per impiegati FIC / OpenMoko e soci/contrattisti/consulenti esterni.
+Queste sono solo per impiegati FIC / Openmoko e soci/contrattisti/consulenti esterni.
 
 ==== coreteam@lists.internal.openmoko.org ====
 
@@ -214,7 +214,7 @@ Il nostro sistema di tracciamento bug interno, principalmente per questioni hard
 
 C'è il canale #openmoko su irc.freenode.net.
 
-C'è anche un canale #openmoko-devel, che è solo per gli sviluppatori interni di OpenMoko, scusate.
+C'è anche un canale #openmoko-devel, che è solo per gli sviluppatori interni di Openmoko, scusate.
 
 == Project Resources ==
 
