--- a/Development_with_Eclipse.mw
+++ b/Development_with_Eclipse.mw
@@ -4,11 +4,11 @@ Eclipse recently has the C/C++ development plug-in. You will need the recent Ecl
 
 This approach not only shortens development cycle from minutes to seconds, but also allows to use the Eclipse debugger for C development, stepping through the code and watching variables. 
 
-The executable for the mobile phone can usually be produced from the same source files using the OpenMoko toolchain. As all surroundings of these files for Eclipse and OpenMoko project are not the same, the most straightforward approach is just to set two development environments and put the symbolic links of the source files into the OpenMoko project directory. 
+The executable for the mobile phone can usually be produced from the same source files using the Openmoko toolchain. As all surroundings of these files for Eclipse and Openmoko project are not the same, the most straightforward approach is just to set two development environments and put the symbolic links of the source files into the Openmoko project directory. 
 
-After producing the OpenMoko executable, it may be reasonable to try it via X, using the keyboard, mouse and screen of the desktop computer. All you need is to use the  -X option in the ssh command when you log in into the connected mobile phone. After that, you should be able to run the application inside the phone but have its X window on a screen of the desktop machine. This way you can check the actual execution speed and have access to the mobile phone devices that are not present on PC.
+After producing the Openmoko executable, it may be reasonable to try it via X, using the keyboard, mouse and screen of the desktop computer. All you need is to use the  -X option in the ssh command when you log in into the connected mobile phone. After that, you should be able to run the application inside the phone but have its X window on a screen of the desktop machine. This way you can check the actual execution speed and have access to the mobile phone devices that are not present on PC.
 
-Eclipse allows to add the custom builder to the project. These builders can be either Ant scripts or the executable shell scripts. These possibilities can be used to force the OpenMoko toolchain to produce the phone executable without leaving the Eclipse IDE.
+Eclipse allows to add the custom builder to the project. These builders can be either Ant scripts or the executable shell scripts. These possibilities can be used to force the Openmoko toolchain to produce the phone executable without leaving the Eclipse IDE.
 
 [[Category:Application Developer]]
 [[Category:Guides]]
