Replacing 'OpenMoko' with 'Openmoko'

--- a/Devirginator.mw
+++ b/Devirginator.mw
@@ -54,7 +54,7 @@ http://svn.openmoko.org/developers/werner/openocd-wait-patiently.patch
 
 For build instructions, see http://svn.openmoko.org/developers/werner/notes/openocd
 
-  If you're using the version of OpenOCD built by the OpenMoko
+  If you're using the version of OpenOCD built by the Openmoko
   distribution (SVN revision 1180 or later), the patch is already
   applied.
 
@@ -171,7 +171,7 @@ The stage 0 splash screen, a smiling face on a green background.
 
 
 * tmp/System_boot.png -> tmp/splash.gz
-This is a copy of the OpenMoko logo, which then gets converted to a
+This is a copy of the Openmoko logo, which then gets converted to a
 gzip-ed raw framebuffer image.
 
 * tmp/openmoko-devel-image-*.rootfs.jffs2
@@ -277,7 +277,7 @@ Phase 2 can take several minutes. Progress of the download procedure
 is indicated by hash signs (#) printed on the terminal where
 "devirginate" runs.
 
-At the end of phase 2, the device resets, displays a partial OpenMoko
+At the end of phase 2, the device resets, displays a partial Openmoko
 splash screen, then resets again, displays the correct splash screen
 and finally boots Linux.
 
