Replacing 'OpenMoko' with 'Openmoko'

--- a/Devirginator%2Fit.mw
+++ b/Devirginator%2Fit.mw
@@ -48,7 +48,7 @@ http://svn.openmoko.org/developers/werner/openocd-wait-patiently.patch
 
 Per le istruzioni di generazione, consultare http://svn.openmoko.org/developers/werner/notes/openocd
 
-  Se si usa la build di OpenOCD creata da OpenMoko (revisione SVN 1180 o successiva), la patch è già applicata.
+  Se si usa la build di OpenOCD creata da Openmoko (revisione SVN 1180 o successiva), la patch è già applicata.
 
 ==== telnet ====
 
@@ -123,7 +123,7 @@ Lo splash screen dello stage 0, un faccia sorridente su sfondo verde.
 
 
 * tmp/System_boot.png -> tmp/splash.gz
-Questa è una copia del logo OpenMoko, che verrà convertito in
+Questa è una copia del logo Openmoko, che verrà convertito in
 un'immagine gzip-ed raw framebuffer.
 
 * tmp/openmoko-devel-image-*.rootfs.jffs2
