--- a/Dfu-util.mw
+++ b/Dfu-util.mw
@@ -105,7 +105,7 @@ Using the --list option, you can list the available DFU capable devices, their c
 Below is an example for a current Neo1973 phone in u-boot '''Runtime Mode'''
 <pre>
 # ./dfu-util --list
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 Found DFU Runtime: [0x1457:0x5119] devnum=0, cfg=0, intf=2, alt=0, name="USB Device Firmware Upgrade"
@@ -114,7 +114,7 @@ Found DFU Runtime: [0x1457:0x5119] devnum=0, cfg=0, intf=2, alt=0, name="USB Dev
 Below is an example for a current Neo1973 phone in u-boot '''DFU Mode'''
 <pre>
 # ./dfu-util --list
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 Found DFU: [0x1457:0x5119] devnum=16, cfg=0, intf=0, alt=0, name="RAM 0x32000000"
