--- a/Dfu-util-windows.mw
+++ b/Dfu-util-windows.mw
@@ -2,7 +2,7 @@
 
 {{Note|This has been reported to work on Windows 2000, Windows XP and Windows Vista with the Neo FreeRunner.  No reports have been received on whether it works with other versions of Windows or with the Neo 1973}}
 
-In order to use dfu-util for Win32, you need to install a Windows driver when the device is in U-Boot.  Theoretically, a USB standard-compliant DFU class driver should work, unfortunately, Windows does not come bundled with one.  If you do not have a DFU class driver (ie. Windows does not recognize the device in U-Boot mode and pops up the New Device Wizard), the LibUSB-Win32 driver and accompanying INF file for the Neo FreeRunner can be used, this driver can be found in OpenMokoDFU.zip at the link below.  When the Windows New Device Wizard pops up, use this driver.
+In order to use dfu-util for Win32, you need to install a Windows driver when the device is in U-Boot.  Theoretically, a USB standard-compliant DFU class driver should work, unfortunately, Windows does not come bundled with one.  If you do not have a DFU class driver (ie. Windows does not recognize the device in U-Boot mode and pops up the New Device Wizard), the LibUSB-Win32 driver and accompanying INF file for the Neo FreeRunner can be used, this driver can be found in OpenmokoDFU.zip at the link below.  When the Windows New Device Wizard pops up, use this driver.
 
 Once the driver is installed, then you can proceed and use the instructions found at the main [[dfu-util]] page.  
 
@@ -215,7 +215,7 @@ A Windows driver needs to be installed when the device is in U-Boot and connecte
   Vendor ID  Product ID  Description
   0x1D50      0x5119      USB Device
 
-Insert the Manufacturer name: OpenMoko, or FIC?
+Insert the Manufacturer name: Openmoko, or FIC?
 
 Insert device description: Device Firmware Upgrade
 
