--- a/Dialer%2F2007.2.mw
+++ b/Dialer%2F2007.2.mw
@@ -1,7 +1,7 @@
 {{OM2007.2}}
 
 == Overview ==
-This article defines the Dialer Application, an application designed for the OpenMoko platform. The Dialer Application handles all call related interactions.
+This article defines the Dialer Application, an application designed for the Openmoko platform. The Dialer Application handles all call related interactions.
 
 == Use Cases ==
 Here are some possible use cases:
