Replacing 'OpenMoko' with 'Openmoko'

--- a/Disassembling_Neo1973%2Fru.mw
+++ b/Disassembling_Neo1973%2Fru.mw
@@ -1,7 +1,7 @@
 {{note| Данная страница дает инструкции по вскрытию платформы GTA01Bv3. Будущие выпуски, возможно, будут открываться иначе. Пока предполагается, что продаваемая версия GTA01B4 и будущая массовая [[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]] будут поставляться в том же корпусе. }}
 
 == Задняя панель Neo1973 ==
-...изображена на нижеприведенной фотографии. Отчетливо виден логотип и текст OpenMoko.
+...изображена на нижеприведенной фотографии. Отчетливо виден логотип и текст Openmoko.
 
 [[Image:Gta01b v3 case back white.jpg|700px]]
 
