*Empty MediaWiki Message*

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -6,14 +6,6 @@ This documents quickly some key useability bits about [[Om 2008.8]] and initial 
 
 '''New Keyboard'''
 
-Sliding your finger left is backspace.
-
-Sliding your finger right is space.
-
-Sliding your finger up/down changes between lowercase/uppercase/numbers/special characters.
-
-Hovering over a letter for more than 2 seconds activates [[Om2008.8_Keyboard#Keyboard_Zoom|zoom mode]], allowing you to type specific letters without prediction.
-
 More details at : [[Om2008.8 Keyboard]]
 
 '''Installer'''
@@ -42,8 +34,9 @@ Press "remove" to close currently focused application.
 
 *'''"shutdown -r now"''' or  '''"reboot"'''- Reboots your phone.
 
-''' Configuring Om 2008.8 '''
+=== Configuring Om 2008.8 ===
 
+==== Internet ====
 Follow this [[http://support.microsoft.com/kb/306126 guide (Windows Users)]]to share your internet with your phone.
 
 To share your internet connection on a Linux host follow this [[USB_Networking|Guide]]
@@ -66,6 +59,8 @@ Edit the USB section to look like this:
  	up echo nameserver 208.67.220.220 >/etc/resolv.conf 
  	#up echo nameserver 192.168.0.200 >/etc/resolv.conf
 
+==== Unofficial (zechke) Updates ====
+
 Now edit the Multiverse repository (/etc/opkg/Multiverse-feed.conf) to fix a typo: Remove the duplicate "/" before Multiverse. 
 
 Create a file named zecke.conf and paste this into it to get the latest unofficial updates. (Temporary Repository)
@@ -78,8 +73,11 @@ Create a file named zecke.conf and paste this into it to get the latest unoffici
 
 (Restart your phone)
 
+==== Advanced power management ====
 
 Now that you are able to install software, It is a good time to install "illume-config" to can gain access to more advanced power management features and to change the look of the GUI through the wrench that will now appear in the top bar. (Restart your phone)
+
+==== Mediaplayer ====
 
 The Media Player is basically useless due to the default theme. To install with a better theme run:
 
@@ -89,7 +87,7 @@ The Media Player is basically useless due to the default theme. To install with 
  rm openmoko-mediaplayer-theme.tar.bz2
 
 
-''' Bugs/Fixes '''
+=== Bugs/Fixes ===
 
 *The Media Player is basically unusable because of the skin. And is also very buggy.
 *Battery meter always says its charging. Installing a terminal and running "apm" will display the proper battery status.
