--- a/Display_Locker.mw
+++ b/Display_Locker.mw
@@ -14,7 +14,7 @@ draws a specific motion on the screen.
 
 == Realization ==
 The user has to drag something from the buttom of the screen to the top of the screen.
-'''The display locker is now in mainline [[OpenMoko]].'''
+'''The display locker is now in mainline [[Openmoko]].'''
 
 If you have any ideas or a fancy new image set, please contact me ("borg" in #openmoko or olaf@uni-paderborn.de).
 
