Replacing 'OpenMoko' with 'Openmoko'

--- a/Edje.mw
+++ b/Edje.mw
@@ -1,5 +1,5 @@
 = Edje =
-Is a configuration-file format which origins of [http://www.enlightenment.org/ Enlightenment 17]. It is used by Openmoko and Illume for configuring a lot of the look of OpenMoko and its applications.
+Is a configuration-file format which origins of [http://www.enlightenment.org/ Enlightenment 17]. It is used by Openmoko and Illume for configuring a lot of the look of Openmoko and its applications.
 
 Edje uses *.edj Files as binary-configuration files and *.edc as the source of such an *.edj file.
 
