Replacing 'OpenMoko' with 'Openmoko'

--- a/Events:FOSDEM_2007.mw
+++ b/Events:FOSDEM_2007.mw
@@ -1,5 +1,5 @@
 [[Category:Event]]
-== OpenMoko at FOSDEM ==
+== Openmoko at FOSDEM ==
 
 This page documents a past event.
 
@@ -10,11 +10,11 @@ Sean Moss-Pultz will be giving a presentation at FOSDEM:
 Michael 'Mickey' Lauer will also be there, and mentioned:
 "The most prominent informal FOSDEM gathering is the Friday Beer Event at the Roy D'Espagne. A major part of the OpenEmbedded crowd will be there, as well."
 
-Here is a [http://video.google.de/videoplay?docid=-3742589179435830945&q=Openmoko video] of the OpenMoko presentation by Sean Moss - Pultz at the FOSDEM.
+Here is a [http://video.google.de/videoplay?docid=-3742589179435830945&q=Openmoko video] of the Openmoko presentation by Sean Moss - Pultz at the FOSDEM.
 
 == Fake it at FOSDEM Beer Event ==
 
-Quite a few OpenMoko enthusiasts will be meeting-up at the Friday Beer Event on February the 23rd. 
+Quite a few Openmoko enthusiasts will be meeting-up at the Friday Beer Event on February the 23rd. 
 http://www.fosdem.org/2007/beerevent
 
 Sean mentioned being at the beer event himself, to quote the most important part of that exchange:
