--- a/External_Feeds.mw
+++ b/External_Feeds.mw
@@ -1,24 +1,24 @@
-There are a number of blogs written by people in the [[OpenMoko]] community that are not part of the official feed, however can be accessed individually with the URLs below:
+There are a number of blogs written by people in the [[Openmoko]] community that are not part of the official feed, however can be accessed individually with the URLs below:
 
 {| border="1"
 ! Blog Name !! Author !! Description !! Feed
 |-
 |devzero.net          || [[User:Jgm|Jim McDonald]] || Application development (focused on messaging) || http://beta.blogger.com/feeds/6353086131724697255/posts/summary/-/openmoko
 |-
-|unethicalblogger.com || [[User:rtyler | R. Tyler Ballance]]          || Porting Mono to OpenMoko                       || http://unethicalblogger.com/blog_categories/openmoko/feed
+|unethicalblogger.com || [[User:rtyler | R. Tyler Ballance]]          || Porting Mono to Openmoko                       || http://unethicalblogger.com/blog_categories/openmoko/feed
 |-
-|OpenMoko.org.PL  || [[User:Zdanek|Bartłomiej Zdanowski]] [[User:Cayco|Krzysztof Kajkowski]]          || First polish OpenMoko site (mostly blogs)                       || http://www.openmoko.org.pl/rss.xml
+|Openmoko.org.PL  || [[User:Zdanek|Bartłomiej Zdanowski]] [[User:Cayco|Krzysztof Kajkowski]]          || First polish Openmoko site (mostly blogs)                       || http://www.openmoko.org.pl/rss.xml
 |-
 |mokoapps.org  || [[User:Henrikw|Henrikw]]          || Site to promote openmoko applications                       || http://www.mokoapps.org/feed/
 |-
 |-
-|neo1973.wordpress.com  || [[User:MTH|MTH]]          || German blog about OpenMoko and Neo1973                       || http://neo1973.wordpress.com/feed/
+|neo1973.wordpress.com  || [[User:MTH|MTH]]          || German blog about Openmoko and Neo1973                       || http://neo1973.wordpress.com/feed/
 |-
-|http://slcolombia.org/aztlek/Blog/  || [[User:Aztlek|Aztlek]]          || Spanish blog about Free Software (and OpenMoko)                    || 
+|http://slcolombia.org/aztlek/Blog/  || [[User:Aztlek|Aztlek]]          || Spanish blog about Free Software (and Openmoko)                    || 
 |-
 |http://www.kernel-labs.org/  || [[User:javiroman|javiroman]]          || Spanish blog about Neo1973 system programming                       || http://www.kernel-labs.org/?q=node/feed
 |-
-|rudiaelinux.com/openmoko/  || [[User:Morpheus90|Morpheus90]]          || Italian blog about Neo1973 and OpenMoko                      || http://www.rudiaelinux.com/openmoko/?feed=rss2
+|rudiaelinux.com/openmoko/  || [[User:Morpheus90|Morpheus90]]          || Italian blog about Neo1973 and Openmoko                      || http://www.rudiaelinux.com/openmoko/?feed=rss2
 |-
 |http://openmoko-fr.org  || [[User:swap38|swap38]]          || Communauté francophone sur openmoko (blog, forum, wiki) || http://openmoko-fr.org/blog/index.php?feed/rss2
 |-
