Replacing 'OpenMoko' with 'Openmoko'

--- a/External_links.mw
+++ b/External_links.mw
@@ -1,6 +1,6 @@
 ===Open source===
 http://en.wikipedia.org/wiki/Category:Embedded_Linux
-<!-- *[http://wiki.openmoko.org/ Welcome to the OpenMoko™ public Wiki] -->
+<!-- *[http://wiki.openmoko.org/ Welcome to the Openmoko™ public Wiki] -->
 *[http://qtopia.net/modules/devices/ Qtopia]
 *[http://www.elinux.org/ Embedded Linux Wiki]
 
